updates to bank account service